k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: restricted
